<resources>
    <string name="app_name">Substantiv</string>
    <string name="action_settings">Settings</string>
    <string name="game">Game</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="substantiv">Substantiv</string>
    <string name="rule">Rule</string>
    <string name="der">Der</string>
    <string name="die">Die</string>
    <string name="das">Das</string>
    <string name="terminations">Terminations</string>


    <string name="der_rules">
        - The majority of nouns which come from verbs without a suffix (but often with a vowel change).\n
        - 60% of nouns in -el and -er.\n
        - 80%  of nouns in -en.\n
        - 67% of monosyllabic nouns (the rest are 19% neuter and 14% feminine).\n
        - Nouns with "-er" arising from verbs.\n
        - Male humans (and their professions) and male animals.\n
        - Nouns of all seasons, months, days of the week.\n
    </string>

    <string name="die_rules">
        - Most nouns ending in -t originating from verbs.\n
        - The main part (90%) of nouns in -e.\n
        - Nouns derived from adjectives with the suffix -nis.\n
        - Female humans (and their professions) and female animals.\n
    </string>

    <string name="das_rules">
        - 90% of the nouns with the prefix "Ge-".\n
        - Chemical terms which end in "-in" and metals.\n
        - Nouns which stem from verb infinitives.\n
        - Two-thirds of nouns in -nis and -sal.\n
        - Most nouns ending in -al, -an, -ar, -är, -at, -ent, -ett, -ier, -iv, -o and -on (which are of foreign origin), provided that they desingnate things.\n
        - Nouns which comes from adjectives.\n
        - Human babies and animal babies.\n
    </string>

    <string name="der_terminations">
        -ant, -ast, -ich, -ig, -ismus, -ling, -or, -us.
    </string>

    <string name="die_terminations">
        -a, -anz, -ei, -enz, -heit, -ie, -ik, -keit, -schaft, -sion, -tät, -tion, -ung, -ur, -in (when it comes to female humans (and their professions) and female animals).
    </string>

    <string name="das_terminations">
        -chen, -lein, -ma, -ment, -sel, -tel, -tum, -um.
    </string>

    <string name="male">Male - \"der\"</string>
    <string name="feminine">Feminine - \"die\"</string>
    <string name="neuter">Neuter - \"das\"</string>
    <string name="change_speed">change_speed</string>
    <string name="speed">Speed</string>
    <string name="locale_key">language</string>
    <string name="change_language">Language</string>
    <string name="default_speed">2</string>
    <string name="default_language">en</string>
    <string name="select_language">Select language</string>
    <string name="reset_message">Are you sure that you wont reset the application to default settings?</string>
    <string name="reset_dialog_title">Reset all settings</string>
    <string name="positive_button_text">Reset application</string>
    <string name="negative_button_text">Cancel</string>
    <string name="reset_toast_message">Application reset!</string>
    <string name="rules">Rules</string>
    <string name="default_max_score_key">default_max_score</string>
    <string name="default_quiz_count_key">default_quiz_count</string>
    <string name="shuffle_quiz_count_key">shuffle_quiz_count</string>
    <string name="score_quiz_record_key">score_quiz_record</string>
    <string name="shuffle_quiz_record_key">shuffle_quiz_record</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="progress">Progress</string>
    <string name="score_quiz_record_value">0</string>
    <string name="shuffle_quiz_record_value">0</string>

</resources>
