<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.serhio.substantiv.ScoreQuizFragment"
    tools:layout_editor_absoluteY="81dp">


    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/shuffle_card_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/shadow_last"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="#ffffff"
        card_view:cardCornerRadius="8dp"
        card_view:cardUseCompatPadding="true"
        card_view:layout_constraintBottom_toTopOf="@+id/guideline5"
        card_view:layout_constraintEnd_toStartOf="@+id/guideline2"
        card_view:layout_constraintStart_toStartOf="@+id/guideline3"
        card_view:layout_constraintTop_toTopOf="@+id/guideline4">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:background="@drawable/rounded_corner"
                    android:orientation="vertical"
                    card_view:layout_constraintTop_toTopOf="parent"></LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/substantiv_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/substantiv"
                android:textSize="@dimen/substantiv_text_size"
                android:textStyle="bold"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintHorizontal_bias="0.55"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/gender_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:layout_toLeftOf="@id/substantiv_text_view"
                android:gravity="right"
                android:paddingRight="8dp"
                android:text="@string/der"
                android:textSize="@dimen/substantiv_text_size"
                android:textStyle="bold"
                card_view:layout_constraintBottom_toBottomOf="@+id/substantiv_text_view"
                card_view:layout_constraintEnd_toStartOf="@+id/substantiv_text_view"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/rule_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/substantiv_text_view"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/rule"
                card_view:layout_constraintBottom_toTopOf="@+id/linearLayout2"
                card_view:layout_constraintTop_toBottomOf="@+id/translation_text_view" />

            <TextView
                android:id="@+id/translation_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_corner_4dp"
                android:text="translation"
                card_view:layout_constraintEnd_toEndOf="@+id/substantiv_text_view"
                card_view:layout_constraintStart_toStartOf="@+id/substantiv_text_view"
                card_view:layout_constraintTop_toBottomOf="@+id/substantiv_text_view" />

            <RelativeLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                card_view:layout_constraintBottom_toBottomOf="parent">

                <LinearLayout
                    android:id="@+id/score_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/star_grey" />

                </LinearLayout>


                <ImageView
                    android:id="@+id/scoreIcon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="8dp" />

            </RelativeLayout>

            <View
                android:layout_width="246dp"
                android:layout_height="2dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:background="?android:attr/listDivider"
                card_view:layout_constraintBottom_toTopOf="@+id/linearLayout2"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent" />

            <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="65dp" />


        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- TODO: Update blank fragment layout -->


        <Button
            android:id="@+id/der"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/default_antwort_button"
            android:text="@string/der" />

        <Button
            android:id="@+id/die"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/default_antwort_button"
            android:text="@string/die" />

        <Button
            android:id="@+id/das"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/default_antwort_button"
            android:text="@string/das" />

    </LinearLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.66" />

</android.support.constraint.ConstraintLayout>
