<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/shuffle_card_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/shadow_last"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        card_view:cardCornerRadius="8dp"
        card_view:cardUseCompatPadding="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/substantiv_container"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:background="@drawable/rounded_corner"
                    android:orientation="vertical"
                    card_view:layout_constraintTop_toTopOf="parent"></LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/substantiv_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/substantiv"
                android:textSize="@dimen/substantiv_text_size"
                android:textStyle="bold"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintHorizontal_bias="0.55"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/gender_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:layout_toLeftOf="@id/substantiv_text_view"
                android:gravity="right"
                android:paddingRight="8dp"
                android:text="@string/der"
                android:textSize="@dimen/substantiv_text_size"
                android:textStyle="bold"
                card_view:layout_constraintBottom_toBottomOf="@+id/substantiv_text_view"
                card_view:layout_constraintEnd_toStartOf="@+id/substantiv_text_view"
                card_view:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="0dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

            </FrameLayout>

            <TextView
                android:id="@+id/translation_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_corner_4dp"
                android:text="translation"
                card_view:layout_constraintEnd_toEndOf="@+id/substantiv_text_view"
                card_view:layout_constraintStart_toStartOf="@+id/substantiv_text_view"
                card_view:layout_constraintTop_toBottomOf="@+id/substantiv_text_view" />

            <TextView
                android:id="@+id/rule_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/substantiv_text_view"
                android:layout_marginTop="8dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/rule"
                card_view:layout_constraintBottom_toTopOf="@+id/linearLayout2"
                card_view:layout_constraintTop_toBottomOf="@+id/translation_text_view" />


        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>